--- a/react-app/package.json
+++ b/react-app/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/d3": "^7.4.0",
     "@types/lodash": "^4.14.186",
+    "@types/node": "^18.11.17",
     "@types/react": "^18.0.23",
     "@types/react-dom": "^18.0.7",
     "@types/react-table": "^7.7.12",
