--- a/react-app/package.json
+++ b/react-app/package.json
@@ -31,6 +31,7 @@
     "axios": "^1.1.3",
     "classnames": "^2.3.2",
     "d3": "^7.6.1",
+    "eventflowviz": "^1.0.1",
     "immer": "^9.0.16",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
